cfsp/tests/snapshots/signature_parse__field_signature_object.snap
---
source: structural_parser/tests/signature_parse.rs
expression: field_signature
---
Field:
  field_type:
    Class:
      package_path: java/lang/
      class_name: Object
      type_arguments: []
      inner_classes: []

