cfsp/tests/snapshots/signature_parse__field_signature_type_variable.snap
---
source: structural_parser/tests/signature_parse.rs
expression: field_signature
---
Field:
  field_type:
    TypeVariable: T

